@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Version 5.6.4 (????-??-??):
 ---------------------------
 
+- Modified mapserver units enum order to fix some problems with external softwares (#3173)
+
 - fix blending of transparent layers with AGG on MSB archs (#3471)
 
 - Fixed imageObj->saveImage() sends unnecessary headers (#3418) 
